add config supports for plugin scanner and etc